src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACCL__Account_Email__c</fullName>
        <description>Email of the customer.</description>
        <inlineHelpText>Help Test test</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Number__c</fullName>
        <description>Customer Number.</description>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Account_Template_Description__c</fullName>
        <description>Customer Template Description.</description>
        <formula>ACCL__Account_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Ad_Break_Day__c</fullName>
        <defaultValue>&quot;Sunday&quot;</defaultValue>
        <label>Ad-Break Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_Sales_Rep__c</fullName>
        <description>Get the name of org unit users that belongs to the respective territory, populated from the flow.</description>
        <label>Sales Rep</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to customer template.</description>
        <label>Customer Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Account_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Account_Template__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__City__c</fullName>
        <description>Name of a city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Country__c</fullName>
        <description>Describes country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>at</fullName>
                </value>
                <value>
                    <fullName>ca</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>jp</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>ch</fullName>
                </value>
                <value>
                    <fullName>gb</fullName>
                </value>
                <value>
                    <fullName>us</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>au</fullName>
                </value>
                <value>
                    <fullName>be</fullName>
                </value>
                <value>
                    <fullName>br</fullName>
                </value>
                <value>
                    <fullName>cl</fullName>
                </value>
                <value>
                    <fullName>cn</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>ie</fullName>
                </value>
                <value>
                    <fullName>mx</fullName>
                </value>
                <value>
                    <fullName>nl</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>za</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the unique external id.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Geolocation__c</fullName>
        <description>Contains Longitude and Latitude.</description>
        <inlineHelpText>Latitude (-90; 90)
      Longitude (-180; 180)</inlineHelpText>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ACCL__International_Postal_Code__c</fullName>
        <description>Postal code with format valid for every country.</description>
        <label>International Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Name_2__c</fullName>
        <description>Alternate name for the customer.</description>
        <label>Name 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_Of_Extensions__c</fullName>
        <description>Count of the CustomerExtension records.</description>
        <label>Number Of Extensions</label>
        <summaryForeignKey>ACCL__Account_Extension__c.ACCL__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Postal_Code__c</fullName>
        <description>No longer used, the International_Postal_Code will be used instead of Postal_Code.</description>
        <label>Postal Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales organization which the customer belongs to.</description>
        <formula>Text(ACCL__Account_Template__r.ACCL__Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>State or province of a country, e.g. California and United States.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
				<value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Street__c</fullName>
        <description>Name of a street.</description>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Upload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Upload Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccountTeam__c</fullName>
        <description>Indicates the team information of the account</description>
        <label>Account Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccountTerritory__c</fullName>
        <description>Indicates the territory information of the account</description>
        <label>Account Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_KeyAccount__c</fullName>
        <label>KeyAccount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Note__c</fullName>
        <description>To store notes at Account level</description>
        <label>Account Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
	<fields>
        <fullName>MDLZ_SAPBranchId__c</fullName>
        <label>SAP Branch Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Mondelez_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCL__Account_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>US01</value>
        </filters>
        <label>Mondelez Customers</label>
    </listViews>
    <recordTypes>
        <fullName>ACCL__Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__ACSF_Prevent_Account_Template_Change</fullName>
        <active>true</active>
        <description>The Account Template can&apos;t be edited after Customer creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Account_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Account_Template__c</errorDisplayField>
        <errorMessage>The Account Template can&apos;t be edited after Customer creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Avoid_Change_External_ID</fullName>
        <active>true</active>
        <description>You cannot modify the ExternalId once it has an existent value.</description>
        <errorConditionFormula>AND ( 
ISCHANGED(ACCL__ExternalId__c), 
NOT(ISBLANK(PRIORVALUE(ACCL__ExternalId__c))) 
)</errorConditionFormula>
        <errorDisplayField>ACCL__ExternalId__c</errorDisplayField>
        <errorMessage>The ExternalId can&apos;t be edited after Customer creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Only_One_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Number_Of_Extensions__c &gt; 1</errorConditionFormula>
        <errorMessage>You must add a maximum of one extension record to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( ParentId )),  Parent.ACCL__Sales_Org__c &lt;&gt; TEXT(ACCL__Account_Template__r.ACCL__Sales_Org__c))</errorConditionFormula>
        <errorMessage>The Parent Customer and the Customer Template must have the same Sales Org.</errorMessage>
    </validationRules>
   <validationRules>
        <fullName>MDLZ_Account_Name_Edit_Access</fullName>
        <active>true</active>
        <description>To remove the Account_Name edit access</description>
        <errorConditionFormula>AND( 
ISCHANGED(Name), 
$Profile.Name  = $Label.MDLZ_DSD_USER )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You do not have permission to edit the Account Name.</errorMessage>
    </validationRules>
</CustomObject>